테스트 코드 작성

--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,41 @@
-buildscript {
-    /* ext 전역변수 */
-    ext {
-        springBootVersion = '2.1.7.RELEASE'
-    }
-    repositories {
-        mavenCentral()
-        jcenter()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-    }
+plugins {
+    id 'org.springframework.boot' version '2.4.5'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'java'
+    id 'war'
+    id "io.freefair.lombok" version "5.3.0"
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-
-group 'kr.co.duolabs'
-version '1.0-SNAPSHOT'
+group = 'co.kr.duolabs'
+version = '0.0.1-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    // Spring MVC
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    // Spring JDBC
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    // Live reload
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    // For stand-alone Tomcat
+    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+
+    // JSP (JSTL, EL)
+    providedRuntime 'org.apache.tomcat.embed:tomcat-embed-jasper'
+    runtimeOnly 'javax.servlet:jstl'
+
+    // MariaDB JDBC Driver
+    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+
+    // OWASP Java Encoder
+    implementation 'org.owasp.encoder:encoder:1.2.+'
+    implementation 'org.owasp.encoder:encoder-jsp:1.2.+'
+
+    implementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'junit:junit:4.13'
 }
 
-test {
-    useJUnitPlatform()
-}
+test { useJUnitPlatform() }
